--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
     <body>
 
+        <div style="height: 55px;"></div>
 
 
-
+        <div id="passwordOutput" class="mx-auto py-1 px-4 rounded-4 mt-5 text-center">
+            &nbsp;
+        </div>
 
 
 
