--- a/index.html
+++ b/index.html
@@ -30,9 +30,24 @@
 
         <div id="passwordOutput" class="mx-auto py-1 px-4 rounded-4 mt-5 text-center">
             &nbsp;
+            
         </div>
 
+        <!-- <div class="checkbox" onclick="checkBox(this)" aria-state="off"></div> -->
+        <div style="height: 55px;"></div>
 
+
+        <div class="container bg-danger mt-5 text-center">
+
+            <div class="fs-2">Settings</div>
+            <hr class="mb-5">
+
+            <div class="d-flex">
+
+            </div>
+
+            
+        </div>
 
 
 
