--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@
         <div style="height: 55px;"></div>
 
 
-        <div class="container bg-danger mt-5 text-center">
+        <div class="container mt-5 text-center py-4">
 
             <div class="fs-2">Settings</div>
             <hr class="mb-5">
 
-            <div class="d-flex">
-
+            <div class=" d-flex align-items-center justify-content-center ">
+                <text class="fs-5 mx-3">Length</text> 
+                <div class="d-flex justify-content-center chrNum mx-3 rounded-2">
+                    <div class="p-2 py-1">-</div>
+                    <div class="p-2 py-1">20</div>
+                    <div class="p-2 py-1">+</div>
+                </div>
             </div>
 
             
