--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div class=" d-flex align-items-center justify-content-center ">
                 <text class="fs-5 mx-3">Length</text> 
                 <div class="d-flex justify-content-center chrNum mx-3 rounded-2">
-                    <div class="p-2 py-1">-</div>
-                    <div class="p-2 py-1">20</div>
-                    <div class="p-2 py-1">+</div>
+                    <div class="p-2 py-1 length" onclick="lengthChange('minus')">-</div>
+                    <div id="lengthShow" class="p-2 py-1">08</div>
+                    <div class="p-2 py-1 length" onclick="lengthChange('add')">+</div>
                 </div>
             </div>
 
