--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 
         <div id="passwordOutput" class="mx-auto py-1 px-4 rounded-4 mt-5 text-center">
             &nbsp;
+        </div>
 
+        <div id="generateBtn" class="mx-auto py-2 px-4 rounded-2 my-3 text-center">
+            Generate
         </div>
 
         <!-- <div class="checkbox" onclick="checkBox(this)" aria-state="off"></div> -->
