--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             &nbsp;
         </div>
 
-        <div id="generateBtn" class="mx-auto py-2 px-4 rounded-2 my-3 text-center">
+        <div id="generateBtn" onclick="generatePassword()" class="mx-auto py-2 px-4 rounded-2 my-3 text-center">
             Generate
         </div>
 
