--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
                     <text class="fs-5 mx-3">Symbols (%,#,$)</text>
                     <div class="checkbox checkboxOn" onclick="includeFunc(this,'special')" aria-state="on"> </div>
                 </div>
+
+                <div class="d-flex align-items-center m-4 justify-content-center">
+                    <text class="fs-5 mx-3">Rememberable</text>
+                    <div class="checkbox checkboxOn" onclick="rememberToggle(this)" aria-state="on"> </div>
+                </div>
             </div>
 
 
