--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             &nbsp;
         </div>
 
-        <div id="generateBtn" onclick="generatePassword()" class="mx-auto py-2 px-4 rounded-2 my-3 text-center">
+        <div id="generateBtn" onclick="generatePassword();buttonClick(this)" class="mx-auto py-2 px-4 rounded-2 my-3 text-center">
             Generate
         </div>
 
@@ -77,12 +77,7 @@
 
                 <div class="d-flex align-items-center m-4 justify-content-center">
                     <text class="fs-5 mx-3">Symbols (%,#,$)</text>
-                    <div class="checkbox checkboxOn" onclick="includeFunc(this,'special')" aria-state="on"> </div>
-                </div>
-
-                <div class="d-flex align-items-center m-4 justify-content-center">
-                    <text class="fs-5 mx-3">Rememberable</text>
-                    <div class="checkbox checkboxOn" onclick="rememberToggle(this)" aria-state="on"> </div>
+                    <div class="checkbox " onclick="includeFunc(this,'special')" aria-state="off"> </div>
                 </div>
             </div>
 
