--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
 
 
-        <title>NAME</title>
+        <title>Password Generator</title>
 
         <!-- bootstrap CSS-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
