--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div style="height: 45px;"></div>
 
 
-        <div id="passwordOutput" class="mx-auto py-1 px-4 rounded-4 mt-5 text-center">
+        <div id="passwordOutput" class="mx-auto py-1 px-4 rounded-4 mt-5 text-center align-items-center d-flex justify-content-center">
             &nbsp;
         </div>
 
